--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       branch_name:
-        description: 'Ingresar Nombre de la Rama'
+        description: 'Nombre de la nueva rama'
         required: true
 
 jobs:
@@ -22,11 +22,17 @@ jobs:
           git config --global user.name "murillowilmar1"
           git config --global user.email "murillowilmar1@gmail.com"
 
-      - name: Crear nueva rama desde main
+      - name: Crear nueva rama desde main y subirla
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git checkout main
           git pull origin main
           git checkout -b ${{ github.event.inputs.branch_name }}
+          
+          # Autenticación con token de GitHub
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
+          
           git push origin ${{ github.event.inputs.branch_name }}
 
       - name: Confirmar éxito
