--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,4 +1,4 @@
-name: Crear rama desde main (con autenticación)
+name: Crear rama usando GitHub CLI
 
 on:
   workflow_dispatch:
@@ -12,27 +12,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Clonar el repositorio con fetch completo
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Configurar usuario Git
+      - name: Instalar GitHub CLI
         run: |
-          git config --global user.name "murillowilmar1"
-          git config --global user.email "murillowilmar1@gmail.com"
+          sudo apt update
+          sudo apt install gh -y
 
-      - name: Reescribir URL remota con autenticación
+      - name: Autenticar GitHub CLI
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          echo "${GH_TOKEN}" | gh auth login --with-token
 
-      - name: Crear y subir nueva rama desde main
+      - name: Crear rama desde main usando GitHub CLI
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git checkout main
-          git pull origin main
-          git checkout -b ${{ github.event.inputs.branch_name }}
+          gh repo clone ${{ github.repository }} repo
+          cd repo
+          git checkout -b ${{ github.event.inputs.branch_name }} origin/main
           git push origin ${{ github.event.inputs.branch_name }}
-
-      - name: Confirmación
-        run: echo "✅ Rama '${{ github.event.inputs.branch_name }}' creada correctamente desde 'main'"
